# hit-simple

./: .gitignore  Makefile  README.md  hit-simple.cabal  hit.cabal
Data/: Git.hs
Data/Git/: Delta.hs  FileReader.hs  FileWriter.hs  Index.hs  Loose.hs  Named.hs  Object.hs  Pack.hs  Path.hs  Ref.hs  Repository.hs  Revision.hs  Storage.hs
Data/Git/Storage/: FileReader.hs
