Name:                hit
Version:             0.3
Synopsis:            Git operations
Description:         Provides low level git operations
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hit
Cabal-Version:       >=1.6
data-files:          README.md

source-repository head
  type: git
  location: git://github.com/Twinside/hit

Library
  Ghc-Options: -O2 -Wall
  Build-Depends: base >= 4 && < 5
               , mtl
               , bytestring
               , attoparsec >= 0.10.1
               , parsec     >= 3
               , filepath
               , directory
               , cryptohash
               , vector
               , random
               , zlib
               , zlib-bindings >= 0.1 && < 0.2
               , bytedump

  Exposed-modules:   Data.Git
  Other-modules: Data.Git.Delta
                 Data.Git.FileReader
                 Data.Git.Index
                 Data.Git.Internal
                 Data.Git.Loose
                 Data.Git.Object
                 Data.Git.Pack
                 Data.Git.Path
                 Data.Git.Ref
                 Data.Git.Repository
                 Data.Git.Revision


